fix formatting and template-related issues
- remove unwanted spaces and line breaks
- use just an image instead of using figure and figure caption to
  display the icon in installation page
- eliminate unnecessary code duplication due to if condition

--- a/static/themes/default/css/plinth.css
+++ b/static/themes/default/css/plinth.css
@@ -545,21 +545,18 @@ a.menu_link_active {
     margin-bottom: 20px;
 }
 
-.app-header > figure {
+.app-header > img {
     margin-top: 25px;
-}
-
-.app-header > figure img {
     width: 100%;
-}
-
-.app-header > figure figcaption {
-    text-align: center;
-    opacity: 0.5;
-    padding: 10px;
-    font-size: 12px;
 }
 
 .app-description {
     grid-column: 2;
+}
+
+.app-header-single-column  {
+    grid-template-columns: 1fr;
+}
+.app-header-single-column .app-description {
+    grid-column: 1;
 }
